# project-management

./: .env.example  .gitignore  Dockerfile  Project-management'.postman_collection.json  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  dependencies.py  projects.py  tasks.py  users.py
app/core/: config.py  exceptions.py
app/db/: database.py
app/migrations/: env.py
app/migrations/versions/: 175ebf5d352c_initial_configuration.py  d27378150142_initial_schema.py
app/models/: __init__.py  base.py  project.py  task.py  user.py
app/repositories/: base.py  project.py  task.py  user.py
app/schemas/: schemas.py
app/services/: auth_service.py  project_service.py  task_service.py  user_service.py
frontend/: next.config.js  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/dev/cache/turbopack/23c46498/: 00000001.sst  00000004.sst  00000005.sst  00000011.sst  00000029.sst  (+302 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/store/: apiSlice.ts
postman/globals/: workspace.postman_globals.json
scripts/: start-app-unix.sh  start-app.sh
tests/: conftest.py  test_auth.py  test_projects.py  test_tasks.py  test_users.py
tests/unit/: test_task_service.py
